# 3DWebEngine

hello_wgpu/: .gitignore  Cargo.toml  index.html
hello_wgpu/src/: assets.rs  camera.rs  chunking.rs  city_store.rs  culling.rs  designer_ml.rs  hello_wgpu.rs  lib.rs  main.rs  mesh.rs  net_mutations.rs  render.rs  types.rs
hello_wgpu/src/assets/: shader.wgsl
