[package]
name = "hello_wgpu"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]     # cdylib → JS glue for the browser

[[bin]]
name = "hello_wgpu_native"
path = "src/main.rs"

[dependencies]
wgpu  = { version = "26.0.0", features = ["webgl"] } # WebGL2 fallback
winit = { version = "0.30.11"}
wasm-bindgen = "0.2"
pollster = "0.3"          # tiny async executor for native
cfg-if   = "1.0"

web-sys = { version = "0.3", features = ["Document","Window","Element","Storage"]}
bytemuck = { version = "1.14", features = ["derive"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
cgmath = "0.18.0"

log = "0.4"
env_logger = "0.11"

console_log = { version = "1", optional = true }

console_error_panic_hook = { version = "0.1", optional = true }

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
base64 = "0.22" 

[features]
# Enable this when building for the web if you want panic messages in the console.
console-panic-hook = ["console_error_panic_hook"]


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"